# yunzhaopin

./: .gitignore  PROJECT_PLAN.md  README.md  SCHEMA_BUGS_BACKLOG.md  SECURITY_AUDIT_REPORT.md  WAP_API_SPEC.md  temp.txt  安装说明.txt
phpyun-rs/: .env.bak.1777367124  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
phpyun-rs/crates/app/: Cargo.toml
phpyun-rs/crates/app/src/: main.rs
phpyun-rs/crates/auth/: Cargo.toml
phpyun-rs/crates/auth/src/: jwt.rs  lib.rs  password.rs
phpyun-rs/crates/core/: Cargo.toml
phpyun-rs/crates/core/src/: admin_guard.rs  audit.rs  background.rs  cache.rs  clock.rs  config.rs  date_parse.rs  db.rs  dev_token.rs  dto.rs  error.rs  events.rs  extractors.rs  http_client.rs  i18n.rs  idempotency.rs  json.rs  jwt.rs  jwt_blacklist.rs  kv.rs  lib.rs  metrics.rs  middleware.rs  oauth.rs  rate_limit.rs  rayon_pool.rs  response.rs  scheduler.rs  session_presence.rs  shutdown.rs  sms.rs  state.rs  storage.rs  telemetry.rs  utils.rs  validators.rs  verify.rs
phpyun-rs/crates/core/tests/: migrate_list.rs
phpyun-rs/crates/handlers/: Cargo.toml
phpyun-rs/crates/handlers/src/: common.rs  lib.rs  openapi.rs  routes.rs
phpyun-rs/crates/handlers/src/v1/: mod.rs
phpyun-rs/crates/handlers/src/v2/: mod.rs
phpyun-rs/crates/handlers/tests/: data_audit.rs  endpoint_smoke.rs  health.rs  new_endpoints.rs  openapi_completeness.rs  response_contract.rs  versioning.rs
phpyun-rs/crates/models/: Cargo.toml
phpyun-rs/crates/models/src/: lib.rs
phpyun-rs/crates/models/src/ad/: entity.rs  repo.rs
phpyun-rs/crates/models/src/announcement/: entity.rs  repo.rs
phpyun-rs/crates/models/src/app_version/: entity.rs  repo.rs
phpyun-rs/crates/models/src/apply/: entity.rs  repo.rs
phpyun-rs/crates/models/src/article/: entity.rs  repo.rs
phpyun-rs/crates/models/src/atn/: entity.rs  repo.rs
phpyun-rs/crates/models/src/audit_log/: entity.rs  repo.rs
phpyun-rs/crates/models/src/blacklist/: entity.rs  repo.rs
phpyun-rs/crates/models/src/broadcast/: entity.rs  repo.rs
phpyun-rs/crates/models/src/bulk_migration/: repo.rs
phpyun-rs/crates/models/src/category/: entity.rs  repo.rs
phpyun-rs/crates/models/src/chat/: entity.rs  repo.rs
phpyun-rs/crates/models/src/collect/: entity.rs  repo.rs
phpyun-rs/crates/models/src/company/: entity.rs  repo.rs  view.rs
phpyun-rs/crates/models/src/company_address/: entity.rs  repo.rs
phpyun-rs/crates/models/src/company_banner/: entity.rs  repo.rs
phpyun-rs/crates/models/src/company_cert/: entity.rs  repo.rs
phpyun-rs/crates/models/src/company_claim/: entity.rs  repo.rs
phpyun-rs/crates/models/src/company_content/: entity.rs  repo.rs
phpyun-rs/crates/models/src/company_hr/: entity.rs  repo.rs
phpyun-rs/crates/models/src/company_statis/: repo.rs
phpyun-rs/crates/models/src/company_sub/: entity.rs  repo.rs
phpyun-rs/crates/models/src/company_tpl/: entity.rs  repo.rs
phpyun-rs/crates/models/src/country/: entity.rs  repo.rs
phpyun-rs/crates/models/src/description/: entity.rs  repo.rs
phpyun-rs/crates/models/src/dict_i18n/: repo.rs
phpyun-rs/crates/models/src/domain/: entity.rs  repo.rs
phpyun-rs/crates/models/src/entrust/: entity.rs  repo.rs
phpyun-rs/crates/models/src/eval/: entity.rs  repo.rs
phpyun-rs/crates/models/src/feedback/: entity.rs  repo.rs
phpyun-rs/crates/models/src/friend_link/: entity.rs  repo.rs
phpyun-rs/crates/models/src/gallery/: entity.rs  repo.rs
phpyun-rs/crates/models/src/geo/: repo.rs
phpyun-rs/crates/models/src/gongzhao/: entity.rs  repo.rs
phpyun-rs/crates/models/src/hot_search/: entity.rs  repo.rs
phpyun-rs/crates/models/src/hr_doc/: entity.rs  repo.rs
phpyun-rs/crates/models/src/integral/: entity.rs  repo.rs
phpyun-rs/crates/services/: Cargo.toml
phpyun-rs/crates/services/src/: ad_service.rs  admin_dashboard_service.rs  admin_service.rs  announcement_service.rs  app_version_service.rs  apply_service.rs  article_service.rs  atn_service.rs  audit_log_service.rs  blacklist_service.rs  broadcast_service.rs  captcha_service.rs  category_service.rs  chat_service.rs  claim_service.rs  collect_cache.rs  collect_service.rs  company_address_service.rs  company_banner_service.rs  company_cert_service.rs  company_content_service.rs  company_hr_service.rs  company_service.rs  company_sub_service.rs  company_tpl_service.rs  contact_cert_service.rs  country_service.rs  dashboard_service.rs  data_show_service.rs  description_service.rs  dict_service.rs  domain_errors.rs  entrust_service.rs  eval_service.rs  fan_service.rs  feedback_service.rs  friend_link_service.rs  gallery_service.rs  gongzhao_service.rs  home_service.rs  (+64 more)
phpyun-rs/docs/: API_SHAPE_ANSWERS.md  API_V1_SUMMARY.md
phpyun-rs/locales/: en.json  zh-CN.json  zh-TW.json
phpyun-rs/migrations/: phpyun_2026-04-24_18-37-50_mysql_data_m3KHl.sql
phpyun-rs/migrations/sqlx/: 20260425000001_add_status_for_soft_delete.sql  20260425000002_dict_i18n.sql  20260425000003_region_tree.sql  20260425000003_user_session.sql  20260425000005_region_unsigned_ids.sql  20260426000001_region_global_subdivisions.sql  20260426000002_user_ratings.sql  20260426000003_country.sql  20260427000001_member_password_hash_width.sql  20260428000001_rust_introduced_tables.sql
phpyun-rs/migrations/staging/: 00_README.md  01_countries.sql  02_provinces_cn_us_jp_kr.sql  03_provinces_europe.sql  04_provinces_russia_americas.sql  05_provinces_seasia_oceania.sql  06_provinces_mideast_africa.sql  07_provinces_seasia_more.sql  08_provinces_southasia_mideast.sql  09_provinces_africa_more.sql  10_provinces_latam_more.sql  11_provinces_europe_more.sql  12_provinces_greater_china_centralasia.sql  13_provinces_caribbean_pacific_africa_more.sql  14_provinces_europe_micro.sql  15_provinces_africa_remaining.sql  16_provinces_caribbean_pacific_small.sql  17_provinces_overseas_territories.sql
phpyun-rs/migrations/staging/_archive_phpyun_region/: 00_README_OLD.md
phpyun-rs/scripts/: check-architecture.sh  check_model_types.py  check_path_consistency.py  fix_path_consistency.py  scan_endpoints.py  scan_endpoints.sh
uploads/: .user.ini  (+4 more)
(+1733 files in other folders)
