[package]
name = "phpyun-core"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
sqlx.workspace = true
redis.workspace = true
reqwest.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
moka.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-tracing-context.workspace = true
metrics-util.workspace = true
validator.workspace = true
utoipa.workspace = true
regex.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
dotenvy.workspace = true
cron.workspace = true
rust-i18n.workspace = true
