[package]
name = "phpyun-handlers"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
validator.workspace = true
tracing.workspace = true
sqlx.workspace = true
redis.workspace = true
phpyun_core.workspace = true
phpyun_services.workspace = true
phpyun_models.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
bytes.workspace = true
chrono.workspace = true

[dev-dependencies]
axum-test.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
