[package]
name = "phpyun-services"
version.workspace = true
edition.workspace = true

[dependencies]
# The services layer only depends on the phpyun_* facade + language essentials (serde derive / uuid / serde_json derive helpers).
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
captcha.workspace = true
base64.workspace = true
sha1.workspace = true
sqlx.workspace = true
phpyun_core.workspace = true
phpyun_auth.workspace = true
phpyun_models.workspace = true
arc-swap.workspace = true
chrono.workspace = true
